chore: got rid of deprecation warning